k8s/5.postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: k8s-exam
spec:
  selector:
    app: postgres-db 
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
